--- a/rcAdmin/Countries/Index.cshtml
+++ b/rcAdmin/Countries/Index.cshtml
@@ -25,27 +25,34 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
+<div class="fluid">
 <fieldset>
-    <legend>All Pages | <a href="~/rcAdmin/Countries/New">Create Country</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="~/rcAdmin/Countries/Edit?cid=@item.Id_Country" title="Edit Page">
-    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-</a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?cid=@item.Id_Country&pName=@item.Country_Name" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                                              grid.Column("Country_Name", "Country name", style: "rcGB"),
-                                                              grid.Column("Comments", "Comments", style: "rcGB"),
-                                                              grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
-                    grid.Column(format: @<a href="Index?cid=@item.Id_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
+    <div class="widget">
+        <div class="whead">
+            <h6>All Pages | <a href="~/rcAdmin/Countries/New">Create Country</a> </h6>
+            <div class="clear"></div>
+        </div>
+        <div id="grid" class="widget">
+            @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
+                        @*grid.Column(format: @<a href="WidgetsInSection.cshtml?cid=@item.Id_Country&pName=@item.Country_Name" title="Widgets"><img
+                            src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                                                  grid.Column("Country_Name", "Country name", style: "rcGB"),
+                                                                  grid.Column("Comments", "Comments", style: "rcGB"),
+                                                                  grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
+                        grid.Column(format: @<a href="~/rcAdmin/Countries/Edit?cid=@item.Id_Country" title="Edit Page">
+                                            <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
+                                        </a>),
+                        grid.Column(format: @<a href="Index?cid=@item.Id_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                                            <img src="images/delete.gif" alt="Delete" class="rcGC" />
+                                        </a>)
+                      )
                   )
-              )
+        </div>
     </div>
 </fieldset>
+</div>
