--- a/rcAdmin/ForwardingZone/Index.cshtml
+++ b/rcAdmin/ForwardingZone/Index.cshtml
@@ -25,26 +25,33 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
-<fieldset>
-    <legend>All Forwarding Countries | <a href="~/rcAdmin/ForwardingZone/New">Create Forwarding Zone</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
-                        src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Forwarding_Zone" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                         grid.Column("Forwarding_Zone", "Forwarding_Zone", style: "rcGB"),
-                                         grid.Column("Comments", "Comments", style: "rcGB"),
-                                         grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"),                                         
-                    grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Zone" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Forwarding Countries | <a href="~/rcAdmin/ForwardingZone/New">Create Forwarding Zone</a> </h6>
+                <div class="clear"></div>
+            </div>
+        <div id="grid" class="widget">
+            @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
+                        @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Forwarding_Zone" title="Widgets"><img
+                            src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                             grid.Column("Forwarding_Zone", "Forwarding_Zone", style: "rcGB"),
+                                             grid.Column("Comments", "Comments", style: "rcGB"),
+                                             grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"), 
+                        grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Edit.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
+                            src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),                                        
+                        grid.Column(format: @<a href="~/rcAdmin/ForwardingZone/Index?id=@item.Id_Forwarding_Zone" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                            <img src="images/delete.gif" alt="Delete" class="rcGC" />
+                        </a>)
+                      )
                   )
-              )
-    </div>
-</fieldset>
+        </div>
+        </div>
+    </fieldset>
+</div>
