--- a/rcAdmin/ForwardingServices/NewForwardingServices.cshtml
+++ b/rcAdmin/ForwardingServices/NewForwardingServices.cshtml
@@ -54,17 +54,24 @@
 @Html.Raw(errMSG)
 </div>
 }
-<form method="post" action="">
- <fieldset>
-        <legend>New Forwarding service | <a href="~/rcAdmin/ForwardingServices/IndexForwardingServices">All Forwarding service</a> </legend>
-        <ol>
-            <li >
-                <label for="pName">Forwarding Service Name:</label>
-                <input type="text" name="forwardingSvName" id="forwardingSvName" value="@pName" maxlength="100" @Validation.For("forwardingSvName") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("forwardingSvName")  
-                </li>                
-        </ol>
-          <p class="form-actions">
-            <input type="submit" value="Insert" title="Insert" />
-        </p>
-</fieldset>
-</form>
+<div class="fluid">
+    <form method="post" action="">
+         <fieldset>
+            <div class="widget">
+                <div class="whead">
+                    <h6>New Forwarding service | <a href="~/rcAdmin/ForwardingServices/IndexForwardingServices">All Forwarding service</a> </h6>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pName">Forwarding Service Name:</label></div>
+                    <div class="grid9"><input type="text" name="forwardingSvName" id="forwardingSvName" value="@pName" maxlength="100" @Validation.For("forwardingSvName") /> @Html.ValidationMessage("forwardingSvName")</div>  
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <input type="submit" value="Insert" title="Insert" class="buttonM bBlue formSubmit" />
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
