--- a/rcAdmin/ForwardingCountries/Edit.cshtml
+++ b/rcAdmin/ForwardingCountries/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
+    Page.Title = "Edit Forwarding Country";
     //fileManager
     Response.Cookies[Session.SessionID].Value = "True";
     Response.Cookies[Session.SessionID].Expires = DateTime.Now.AddHours(3);
     var fbURL= System.Web.VirtualPathUtility.ToAbsolute("~/tinymce/plugins/FileManager/Default.aspx?sessionid=") + Session.SessionID.ToString();
-    
+
     //List all Layout files
     DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/rcLayouts"));
     FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly  );
@@ -19,7 +20,7 @@
     "FROM [Forwarding_Countries] t1 inner join Forwarding_Service t2 on t1.Id_Forwarding_Service = t2.Id_Forwarding_Service inner join dbo.Forwarding_Zone t3 on t1.Id_Forwarding_Zone = t3.Id_Forwarding_Zone inner join dbo.Countries t4 on t1.Id_Country = t4.Id_Country where Id_Forwarding_Country=@0";
     var data = db.QuerySingle(sqlSelect, pId);
     var pEditDate = DateTime.Now;
-    
+
     var fwService = data.Id_Forwarding_Service;
     var country = data.Id_Country;
     var fwZone = data.Id_Forwarding_Zone;
@@ -34,7 +35,7 @@
 
     var sqlFwZone = "SELECT [Id_Forwarding_Zone],[Id_Forwarding_Service],[Forwarding_Zone],[Comments]  FROM [dbo].[Forwarding_Zone]";
     var dataZone = db.Query(sqlFwZone);
-    
+
     if (IsPost)
     {
         if (!Request["btnUpdate"].IsEmpty())
@@ -58,105 +59,122 @@
     }
 
 
-    }
+}
 
 @section head {
-<!-- You can use any editor you want. We decided to use TinyMCE visit http://www.tinymce.com// for licence and help -->
-<!-- TinyMCE -->
-<script src="@Href("~/tinymce/tinymce.min.js")" type="text/javascript"></script>
-<script type="text/javascript">
-        var language = navigator.userLanguage;
-
-        tinymce.init({
-            relative_urls: false,
-            // General options
-            selector: "textarea",
-            theme: "modern",
-            height: "400",
-            plugins: ["advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking save table contextmenu directionality emoticons template paste textcolor"],
-
-            file_browser_callback: function(field_name, url, type, win) { 
-            tinymce.activeEditor.windowManager.open({
-            title: "My file browser",
-            url: "@fbURL",
-            width: 950,
-            height: 650
-        }, {
-                window: win,
-                input: field_name,
-                sessionid: '@Session.SessionID.ToString()'
-                
-        });
-    }
-
-
-          });
-
-
-
+    <!-- You can use any editor you want. We decided to use TinyMCE visit http://www.tinymce.com// for licence and help -->
+    <!-- TinyMCE -->
+    <script src="@Href("~/tinymce/tinymce.min.js")" type="text/javascript"></script>
+    <script type="text/javascript">
+            var language = navigator.userLanguage;
+        
+            tinymce.init({
+                relative_urls: false,
+                // General options
+                selector: "textarea",
+                theme: "modern",
+                height: "400",
+                plugins: ["advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking save table contextmenu directionality emoticons template paste textcolor"],
+        
+                file_browser_callback: function(field_name, url, type, win) { 
+                tinymce.activeEditor.windowManager.open({
+                title: "My file browser",
+                url: "@fbURL",
+                width: 950,
+                height: 650
+            }, {
+                    window: win,
+                    input: field_name,
+                    sessionid: '@Session.SessionID.ToString()'
+        
+            });
+        }
+        
+        
+              });
+        
+        
+        
     </script>
-<!-- /TinyMCE -->
-
-<script type="text/javascript">
-    $(document).ready(function () {
-
-        $("#rcBackup").change(function () {
-            $("#editPage").submit();
+    <!-- /TinyMCE -->
+    <script type="text/javascript">
+        $(document).ready(function () {
+        
+            $("#rcBackup").change(function () {
+                $("#editPage").submit();
+            });
+        
         });
-
-    });
-</script>
+    </script>
 }
 @section menu{
-@RenderPage("../_Menu.cshtml")
+    @RenderPage("../_Menu.cshtml")
 }
-<form action="" method="post" id="editPage">
- <fieldset>
-        <legend>Edit Page | <a href="~/rcAdmin/ForwardingCountries">All Forwarding Countries</a> | <a href="~/rcAdmin/ForwardingCountries/New">Create Forwarding Country</a> </legend>
-        @errMSG
-        Edited: @pEditDate 
-        <ol>
-            <li>
-                <label for="pMasterPage">Forwarding Service:</label>
-                <select id="fwService" name="fwService" @Validation.For("fwService")>
-                    @foreach (var f in dataForwardingSv)
-                    {
-                        <option value="@f.Id_Forwarding_Service" @if (fwService == f.Id_Forwarding_Service)
-                                                                 { <text> selected="selected" </text>         }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("fwService")
-            </li>
-
-            <li>
-                <label for="country">Country:</label>
-                <select id="country" name="country" @Validation.For("country")>
-                    @foreach (var f in dataCountry)
-                    {
-                        <option value="@f.Id_Country" @if (country == f.Id_Country)
-                                                      { <text> selected="selected" </text>           }>@rcFunctions.CleanRCNames(f.Country_Name)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("country")
-            </li>
-
-            <li>
-                <label for="fwZone">Forwading Zone:</label>
-                <select id="fwZone" name="fwZone" @Validation.For("fwZone")>
-                    @foreach (var f in dataZone)
-                    {
-                        <option value="@f.Id_Forwarding_Zone" @if (fwZone == f.Id_Forwarding_Zone)
-                                                              { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("fwZone")
-            </li>
-            <li>
-                <label for="pComment">Comments:</label>
-                <input type="text" name="pComment" id="pComment" value="@pComment" maxlength="100" @Validation.For("pComment") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("pComment")
-            </li>
-            </ol>
-            
-     <input type="submit" name="btnUpdate" value="Update" />
-     <img src="images/help.gif" alt="help" title="Load content from backup. Every time you update widget/page razorC will create backup of that widget/page. By default last 5 version of widget/page are stored in rc_Backups table." />
-       
-</fieldset> 
-
-</form>
+<div class="fluid">
+    <form action="" method="post" id="editPage">
+        <fieldset>
+            <div class="widget">
+                <div class="whead">
+                    <h6>Edit Page | <a href="~/rcAdmin/ForwardingCountries">All Forwarding Countries</a> | <a href="~/rcAdmin/ForwardingCountries/New">Create Forwarding Country</a> </h6>
+                    <div class="clear"></div>
+                </div>
+                @*@errMSG
+                Edited: @pEditDate*@
+                <div class="formRow">
+                    <div class="grid3"><label for="pMasterPage">Forwarding Service:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwService" class="selectReq" name="fwService" @Validation.For("fwService")>
+                                @foreach (var f in dataForwardingSv)
+                                {
+                                    <option value="@f.Id_Forwarding_Service" @if (fwService == f.Id_Forwarding_Service)
+                                                                         { <text> selected="selected" </text>          }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
+                                }
+                            </select>  @Html.ValidationMessage("fwService")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="country">Country:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="country" class="selectReq" name="country" @Validation.For("country")>
+                                @foreach (var f in dataCountry)
+                                {
+                                    <option value="@f.Id_Country" @if (country == f.Id_Country)
+                                                              { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Country_Name)</option>
+                                }
+                            </select> @Html.ValidationMessage("country")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="fwZone">Forwading Zone:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwZone" class="selectReq" name="fwZone" @Validation.For("fwZone")>
+                                @foreach (var f in dataZone)
+                                {
+                                    <option value="@f.Id_Forwarding_Zone" @if (fwZone == f.Id_Forwarding_Zone)
+                                                                      { <text> selected="selected" </text>             }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
+                                }
+                            </select> @Html.ValidationMessage("fwZone")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Comments:</label></div>
+                    <div class="grid9"><input type="text" name="pComment" id="pComment" value="@pComment" maxlength="100" @Validation.For("pComment") /> @Html.ValidationMessage("pComment")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <input type="submit" name="btnUpdate" value="Update" class="buttonM bBlue formSubmit" />
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
