--- a/rcAdmin/ForwardingCountries/Index.cshtml
+++ b/rcAdmin/ForwardingCountries/Index.cshtml
@@ -25,26 +25,33 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
-<fieldset>
-    <legend>All Forwarding Countries | <a href="~/rcAdmin/ForwardingCountries/New">Create Forwarding Country</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
-    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-</a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                                                                   grid.Column("Comment", "Comment", style: "rcGB"),
-                                         @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
-                    grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
-                  )
-              )
-    </div>
-</fieldset>
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Forwarding Countries | <a href="~/rcAdmin/ForwardingCountries/New">Create Forwarding Country</a> </h6>
+                <div class="clear"></div>
+            </div>
+                <div id="grid" class="widget">
+                    @grid.GetHtml(
+                            tableStyle: "tDark",
+                            headerStyle: "",
+                            alternatingRowStyle: "alt",
+                            footerStyle: "pgr",
+                            columns: grid.Columns(
+                                grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
+                <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
+            </a>),
+                                grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
+                                    src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
+                                                                                               grid.Column("Comment", "Comment", style: "rcGB"),
+                                                     @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
+                                grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                <img src="images/delete.gif" alt="Delete" class="rcGC" />
+            </a>)
+                              )
+                          )
+                </div>
+        </div>
+    </fieldset>
+</div>
