--- a/rcAdmin/ForwardingServices/IndexForwardingServices.cshtml
+++ b/rcAdmin/ForwardingServices/IndexForwardingServices.cshtml
@@ -25,25 +25,32 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
-<fieldset>
-    <legend>All Pages | <a href="~/rcAdmin/ForwardingServices/NewForwardingServices">Create Forwarding Service</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="EditForwardingServices" title="Edit Page" ><img
-                        src="../images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
-                    grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Service&pName=@item.Forwarding_Service_Name" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                         grid.Column("Forwarding_Service_Name", "Forwarding service name", style: "rcGB"),
-                                         grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
-                    grid.Column(format: @<a href="ForwardingServices.cshtml?id=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="../images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
-                 )
-             )
-    </div>
-</fieldset>
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Pages | <a href="~/rcAdmin/ForwardingServices/NewForwardingServices">Create Forwarding Service</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                        tableStyle: "tDark",
+                        headerStyle: "",
+                        alternatingRowStyle: "alt",
+                        footerStyle: "pgr",
+                        columns: grid.Columns(
+                            @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Service&pName=@item.Forwarding_Service_Name" title="Widgets"><img
+                                src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                                 grid.Column("Forwarding_Service_Name", "Forwarding service name", style: "rcGB"),
+                                                 grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),
+                            grid.Column(format: @<a href="EditForwardingServices" title="Edit Page" ><img
+                                src="../images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                            grid.Column(format: @<a href="ForwardingServices.cshtml?id=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                                <img src="../images/delete.gif" alt="Delete" class="rcGC" />
+                            </a>)
+                         )
+                     )
+            </div>
+        </div>
+    </fieldset>
+</div>
