--- a/rcAdmin/ForwardingZone/Index.cshtml
+++ b/rcAdmin/ForwardingZone/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Page.Title = "Forwarding Country";
+    Page.Title = "Forwarding Zone";
     var db = Database.Open("Checking_Master");
     //Database.OpenConnectionString("Checking_Master")
 
