--- a/rcAdmin/ForwardingCountries/Index.cshtml
+++ b/rcAdmin/ForwardingCountries/Index.cshtml
@@ -39,13 +39,13 @@
                             alternatingRowStyle: "alt",
                             footerStyle: "pgr",
                             columns: grid.Columns(
+                                @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
+                                    src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                                                                               grid.Column("Comment", "Comment", style: "rcGB"),
+                                                     @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
                                 grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
                 <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
             </a>),
-                                grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Country&pName=@item.Comment" title="Widgets"><img
-                                    src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),
-                                                                                               grid.Column("Comment", "Comment", style: "rcGB"),
-                                                     @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
                                 grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
                 <img src="images/delete.gif" alt="Delete" class="rcGC" />
             </a>)
