--- a/rcAdmin/ForwardingQuotation/Index.cshtml
+++ b/rcAdmin/ForwardingQuotation/Index.cshtml
@@ -16,38 +16,47 @@
 
     var qStr = "Select * from dbo.Forwarding_Quotation order by Id_Forwarding_Zone desc";
     var data = db.Query(qStr);    
-    
+
     var grid = new WebGrid(source: data,
                             rowsPerPage: 20);
 
-    
+
 }
 @section head {}
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
-<fieldset>
-    <legend>All Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation/New">Create Forwarding Quotation</a> </legend>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page" ><img
-                        src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
-                    @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Id_Forwarding_Zone" title="Widgets"><img
-                        src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
-                                         grid.Column("Id_Forwarding_Zone", "Id_Forwarding_Zone", style: "rcGB"),
-                                         grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"),
-                                         grid.Column("Type", "Type", style: "rcGB"),
-                                         grid.Column("Weight_From", "Weight_From", style: "rcGB"),
-                                         grid.Column("Weight_To", "Weight_To", style: "rcGB"),
-                    grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
-                   )
-               )
-    </div>
-</fieldset>
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation/New">Create Forwarding Quotation</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                        tableStyle: "tDark",
+                        headerStyle: "",
+                        alternatingRowStyle: "alt",
+                        footerStyle: "pgr",
+                        columns: grid.Columns(
+                            
+                @*grid.Column(format: @<a href="WidgetsInSection.cshtml?pid=@item.Id_Forwarding_Zone&pName=@item.Id_Forwarding_Zone" title="Widgets"><img
+                    src="images/widgets.gif" alt="Delete" class="rcGC" /></a>),*@
+                                     grid.Column("Id_Forwarding_Zone", "Id_Forwarding_Zone", style: "rcGB"),
+                                     grid.Column("Id_Forwarding_Service", "Id_Forwarding_Service", style: "rcGB"),
+                                     grid.Column("Type", "Type", style: "rcGB"),
+                                     grid.Column("Weight_From", "Weight_From", style: "rcGB"),
+                                     grid.Column("Weight_To", "Weight_To", style: "rcGB"),
+                grid.Column(format:
+                @<a href="EditPage.cshtml?id=@item.Id_Forwarding_Zone" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
+                grid.Column(format:
+                @<a href="Index?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                    <img src="images/delete.gif" alt="Delete" class="rcGC" />
+                </a>)
+                                   )
+                               )
+            </div>
+        </div>
+    </fieldset>
+</div>
