--- a/rcAdmin/ForwardingQuotation/New.cshtml
+++ b/rcAdmin/ForwardingQuotation/New.cshtml
@@ -23,7 +23,7 @@
     List<string> pBodies = rcFunctions.pageBodies();
 
 
-    
+
     fwZone = Request["fwZone"];
     fwService = Request["fwService"];
     weightFrom = Request["weightFrom"];
@@ -74,52 +74,74 @@
         @Html.Raw(errMSG)
     </div>
 }
-<form method="post" action="">
-    <fieldset>
-        <legend>New Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation">All Forwarding Quation</a> </legend>
-        <ol>
-            <li>
-                <label for="pMasterPage">Forwarding Service:</label>
-                <select id="fwService" name="fwService" @Validation.For("fwService")>
-                    @foreach (var f in dataForwardingSv)
-                    {
-                        <option value="@f.Id_Forwarding_Service" @if (pMasterPage == f.Forwarding_Service_Name) { <text> selected="selected" </text>        }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("pMasterPage")
-            </li>
-
-
-            <li>
-                <label for="fwZone">Forwading Zone:</label>
-                <select id="fwZone" name="fwZone" @Validation.For("fwZone")>
-                    @foreach (var f in dataZone)
-                    {
-                        <option value="@f.Id_Forwarding_Zone" @if (pMasterPage == f.Forwarding_Zone) { <text> selected="selected" </text>           }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("pMasterPage")
-            </li>
-            <li>
-                <label for="pMasterPage">Type:</label>
-                <select id="pType" name="pType" @Validation.For("pType")>
-                    <option value="0" selected="selected">DOX</option>
-                    <option value="1">WPX</option>
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("pMasterPage")
-            </li>
-            <li>
-                <label for="pComment">Weight From:</label>
-                <input type="text" name="weightFrom" id="weightFrom" value="@weightFrom" maxlength="100" @Validation.For("weightFrom") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("weightFrom")
-            </li>
-            <li>
-                <label for="pComment">Weight To:</label>
-                <input type="text" name="weightTo" id="weightTo" value="@weightTo" maxlength="100" @Validation.For("weightTo") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("weightTo")
-            </li>
-            <li>
-                <label for="pComment">Price:</label>
-                <input type="text" name="price" id="price" value="@price" maxlength="100" @Validation.For("price") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("price")
-            </li>
-        </ol>
-        <p class="form-actions">
-            <input type="submit" value="Insert" title="Insert" />
-        </p>
-    </fieldset>
-</form>
+<div class="fluid">
+    <form method="post" action="">
+        <fieldset>
+            <div class="widget">
+                <div class="whead">
+                    <h6>New Forwarding Quotation | <a href="~/rcAdmin/ForwardingQuotation">All Forwarding Quation</a> </h6>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pMasterPage">Forwarding Service:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwService" class="selectReq" name="fwService" @Validation.For("fwService")>
+                                @foreach (var f in dataForwardingSv)
+                                {
+                                    <option value="@f.Id_Forwarding_Service" @if (pMasterPage == f.Forwarding_Service_Name) { <text> selected="selected" </text>         }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
+                                }
+                            </select> @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>    
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="fwZone">Forwading Zone:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="fwZone" class="selectReq" name="fwZone" @Validation.For("fwZone")>
+                                @foreach (var f in dataZone)
+                                {
+                                    <option value="@f.Id_Forwarding_Zone" @if (pMasterPage == f.Forwarding_Zone) { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Forwarding_Zone)</option>
+                                }
+                            </select> @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pMasterPage">Type:</label></div>
+                    <div class="grid9">
+                        <div class="selector">
+                            <select id="pType" class="selectReq" name="pType" @Validation.For("pType")>
+                                <option value="0" selected="selected">DOX</option>
+                                <option value="1">WPX</option>
+                            </select>  @Html.ValidationMessage("pMasterPage")
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Weight From:</label></div>
+                    <div class="grid9"><input type="text" name="weightFrom" id="weightFrom" value="@weightFrom" maxlength="100" @Validation.For("weightFrom") />  @Html.ValidationMessage("weightFrom")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Weight To:</label></div>
+                    <div class="grid9"><input type="text" name="weightTo" id="weightTo" value="@weightTo" maxlength="100" @Validation.For("weightTo") />  @Html.ValidationMessage("weightTo")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <div class="grid3"><label for="pComment">Price:</label></div>
+                    <div class="grid9"><input type="text" name="price" id="price" value="@price" maxlength="100" @Validation.For("price") />  @Html.ValidationMessage("price")</div>
+                    <div class="clear"></div>
+                </div>
+                <div class="formRow">
+                    <input type="submit" value="Insert" title="Insert" class="buttonM bBlue formSubmit" />
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
