--- a/rcAdmin/ForwardingStatus/Index.cshtml
+++ b/rcAdmin/ForwardingStatus/Index.cshtml
@@ -43,31 +43,40 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
-
-<fieldset>
-    <legend>All Forwarding Status | <a href="~/rcAdmin/ForwardingStatus/New.cshtml">Create Forwarding Status</a> </legend>
-    <form action="" method="POST">
-        <input type="text" id="search" name="searchForwardingStatus" value=""/> <input type="submit" value="Search" title="Search" />
-    </form>
-    <div id="grid">
-        @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
-                alternatingRowStyle: "alt",
-                footerStyle: "pgr",
-                columns: grid.Columns(
-                    grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Edit.cshtml?fsid=@item.Id_Forwarding_Status" title="Edit Page">
-    <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
-</a>),
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Forwarding Status | <a href="~/rcAdmin/ForwardingStatus/New.cshtml">Create Forwarding Status</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div class="searchLine">
+                <form action="" method="POST">
+                    <input type="text" id="search" name="searchForwardingStatus" value=""  placeholder="Enter Account Name ..." class="ac ui-autocomplete-input"/> 
+                    <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+                </form>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                        tableStyle: "tDark",
+                        headerStyle: "",
+                        alternatingRowStyle: "alt",
+                        footerStyle: "pgr",
+                        columns: grid.Columns(
                     
-                    grid.Column("Forwarding_Status", "Forwarding Status", style: "rcGB"),
-                    grid.Column("Forwarding_Status_Desc", "Forwarding Status Desc", style: "rcGB"),
-                    grid.Column("Comments", "Comments", style: "rcGB"),
-                    grid.Column("Key_Words", "Keywords", style: "rcGB"),
-                    grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Index.cshtml?fsid=@item.Id_Forwarding_Status" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="../images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
-                  )
-              )
-    </div>
-</fieldset>
+                            grid.Column("Forwarding_Status", "Forwarding Status", style: "rcGB"),
+                            grid.Column("Forwarding_Status_Desc", "Forwarding Status Desc", style: "rcGB"),
+                            grid.Column("Comments", "Comments", style: "rcGB"),
+                            grid.Column("Key_Words", "Keywords", style: "rcGB"),
+                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Edit.cshtml?fsid=@item.Id_Forwarding_Status" title="Edit Page">
+            <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
+        </a>),
+                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Index.cshtml?fsid=@item.Id_Forwarding_Status" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+            <img src="../images/delete.gif" alt="Delete" class="rcGC" />
+        </a>)
+                          )
+                      )
+            </div>
+        </div>
+    </fieldset>
+</div>
