--- a/rcAdmin/HandlingFee/Index.cshtml
+++ b/rcAdmin/HandlingFee/Index.cshtml
@@ -25,24 +25,31 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
+<div class="fluid">
 <fieldset>
-    <legend>All Forwarding Quotation | <a href="~/rcAdmin/HandlingFee/New">Create Handling Fee</a> </legend>
-    <div id="grid">
+    <div class="widget">
+        <div class="whead">
+            <h6>All Forwarding Quotation | <a href="~/rcAdmin/HandlingFee/New">Create Handling Fee</a> </h6>
+            <div class="clear"></div>
+        </div>
+    <div id="grid" class="widget">
         @grid.GetHtml(
-                tableStyle: "rcGrid",
-                headerStyle: "head",
+                tableStyle: "tDark",
+                headerStyle: "",
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="~/rcAdmin/HandlingFee/Edit?id=@item.Id_Handing_Fee" title="Edit Page"><img src="images/edit_page.gif" alt="Edit?id=@item.Id_Handing_Fee" class="rcGC" /></a>),
                                     grid.Column("Handling_Fee_Type", "Handling_Fee_Type", style: "rcGB"),
                                     grid.Column("Weight_From", "Weight_From", style: "rcGB"),
                                     grid.Column("Weight_To", "Weight_To", style: "rcGB"),
                                     grid.Column("Handling_Fee", "Handling_Fee", style: "rcGB"),
+                    grid.Column(format: @<a href="~/rcAdmin/HandlingFee/Edit?id=@item.Id_Handing_Fee" title="Edit Page"><img src="images/edit_page.gif" alt="Edit?id=@item.Id_Handing_Fee" class="rcGC" /></a>),
                     grid.Column(format: @<a href="Index?id=@item.Id_Handing_Fee" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
     <img src="images/delete.gif" alt="Delete" class="rcGC" />
 </a>)
                    )
                )
     </div>
+    </div>
 </fieldset>
+</div>
