--- a/rcAdmin/SubAccounting/Index.cshtml
+++ b/rcAdmin/SubAccounting/Index.cshtml
@@ -51,31 +51,40 @@
 @section menu{
     @RenderPage("../_Menu.cshtml")
 }
+<div class="fluid">
+    <fieldset>
+        <div class="widget">
+            <div class="whead">
+                <h6>All Sub Accounting | <a href="~/rcAdmin/SubAccounting/New.cshtml">Create Sub Accounting</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div class="searchLine">
+                <form action="" method="POST">
+                    <input type="text" id="search" name="searchSubAcc" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input" value=""/> 
+                    <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+                </form>
+            </div>
+            <div id="grid" class="widget">
+                @grid.GetHtml(
+                    tableStyle: "tDark",
+                    headerStyle: "",
+                    alternatingRowStyle: "alt",
+                    footerStyle: "pgr",
+                    columns: grid.Columns(
 
-<fieldset>
-    <legend>All Sub Accounting | <a href="~/rcAdmin/SubAccounting/New.cshtml">Create Sub Accounting</a> </legend>
-    <form action="" method="POST">
-        <input type="text" id="search" name="searchSubAcc" value=""/> <input type="submit" value="Search" title="Search" />
-    </form>
-    <div id="grid">
-        @grid.GetHtml(
-            tableStyle: "rcGrid",
-            headerStyle: "head",
-            alternatingRowStyle: "alt",
-            footerStyle: "pgr",
-            columns: grid.Columns(
-                grid.Column(format: @<a href="~/rcAdmin/SubAccounting/Edit.cshtml?said=@item.Id_Sub_Accounting" title="Edit Page">
-                                         <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
-                                     </a>),
-
-                    grid.Column("Account_Name", "Account name", style: "rcGB"),
-                    grid.Column("Sub_Accounting_Name", "Sub Accounting Name", style: "rcGB"),
-                    grid.Column("Country_Name", "Country Name", style: "rcGB"),
-                    grid.Column("Contact_Person", "Contact Person", style: "rcGB"),
-                    grid.Column(format: @<a href="~/rcAdmin/SubAccounting/Index.cshtml?said=@item.Id_Sub_Accounting" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-    <img src="../images/delete.gif" alt="Delete" class="rcGC" />
-</a>)
-                  )
-              )
-    </div>
-</fieldset>
+                            grid.Column("Account_Name", "Account name", style: "rcGB"),
+                            grid.Column("Sub_Accounting_Name", "Sub Accounting Name", style: "rcGB"),
+                            grid.Column("Country_Name", "Country Name", style: "rcGB"),
+                            grid.Column("Contact_Person", "Contact Person", style: "rcGB"),
+                        grid.Column(format: @<a href="~/rcAdmin/SubAccounting/Edit.cshtml?said=@item.Id_Sub_Accounting" title="Edit Page">
+                                                 <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
+                                             </a>),
+                            grid.Column(format: @<a href="~/rcAdmin/SubAccounting/Index.cshtml?said=@item.Id_Sub_Accounting" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+            <img src="../images/delete.gif" alt="Delete" class="rcGC" />
+        </a>)
+                          )
+                      )
+            </div>
+        </div>
+    </fieldset>
+</div>
